# otus_cpp_course

./: .gitignore  CMakeLists.txt  Doxyfile  annotated.html  async_8hpp_source.html  base_8hpp_source.html  block__allocator_8hpp_source.html  circle_8hpp_source.html  classStrong.html  classUtility.html  classallocators_1_1BlockAllocator-members.html  classallocators_1_1BlockAllocator.html  classallocators_1_1BlockAllocator_3_01T_00_010_01_4.html  classasync_1_1containers_1_1BulkContainer-members.html  classasync_1_1containers_1_1BulkContainer.html  classasync_1_1containers_1_1BulkContainer__inherit__graph.map  classasync_1_1containers_1_1BulkContainer__inherit__graph.md5  classasync_1_1containers_1_1DynamicBulkContainer-members.html  classasync_1_1containers_1_1DynamicBulkContainer.html  classasync_1_1containers_1_1DynamicBulkContainer__coll__graph.map  classasync_1_1containers_1_1DynamicBulkContainer__coll__graph.md5  classasync_1_1containers_1_1StaticBulkContainer-members.html  classasync_1_1containers_1_1StaticBulkContainer.html  classasync_1_1containers_1_1StaticBulkContainer__inherit__graph.map  classasync_1_1containers_1_1StaticBulkContainer__inherit__graph.md5  classasync_1_1context_1_1Context-members.html  classasync_1_1context_1_1Context.html  classasync_1_1context_1_1ContextHolder-members.html  classasync_1_1context_1_1ContextHolder.html  classasync_1_1pubsub_1_1Queue-members.html  classasync_1_1pubsub_1_1Queue.html  classasync_1_1sinks_1_1SinksHolder-members.html  classasync_1_1sinks_1_1SinksHolder.html  classbayan_1_1file_1_1FileComparator-members.html  classbayan_1_1file_1_1FileComparator.html  classbayan_1_1file_1_1FileComparator__coll__graph.md5  classbayan_1_1file_1_1FileComparator__inherit__graph.map  classbayan_1_1file_1_1FileHashReader-members.html  classbayan_1_1file_1_1FileHashReader.html  classbayan_1_1file_1_1FileHashReaderFactory-members.html  (+528 more)
.github/workflows/: build-docs.yml  release-allocator.yml  release-async.yml  release-bayan.yml  release-bulk-server.yml  release-bulk.yml  release-helloworld.yml  release-ip-filter.yml  release-ip-print.yml  release-join-server.yml  release-map_reduce.yml  release-matrix.yml  release-mvc.yml
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+15 more)
task_10_bulk_server/: CMakeLists.txt  readme.md
task_10_bulk_server/src/: commands.hpp  main.cpp
task_10_bulk_server/src/containers/: bulk_container.hpp  dynamic_container.hpp  static_container.hpp
task_10_bulk_server/src/handlers/: handle_commands.cpp  handle_commands.hpp
task_10_bulk_server/src/logging/: logger.cpp  logger.hpp
task_10_bulk_server/src/pubsub/: queue.hpp
task_10_bulk_server/src/sinks/: sink_holder.cpp  sink_holder.hpp
task_10_bulk_server/src/tcp/: handlers.hpp  tcp_server.cpp  tcp_server.hpp  tcp_session.cpp  tcp_session.hpp
task_10_bulk_server/src/utils/: file.cpp  file.hpp  time.cpp  time.hpp
task_10_bulk_server/src/workers/: workers.cpp  workers.hpp
task_11_join_server/: .env  CMakeLists.txt  Dockerfile  docker-compose.yaml  main.cpp  readme.md
task_11_join_server/src/: handlers.cpp  handlers.hpp
task_11_join_server/src/db/: errors.cpp  errors.hpp  init.cpp  init.hpp  queries.cpp  queries.hpp  results.hpp  session.cpp  session.hpp  statements.hpp  utils.hpp
task_11_join_server/src/db/models/: base.hpp  models.hpp
task_11_join_server/src/handlers/: insert.hpp
task_11_join_server/src/logging/: logger.cpp  logger.hpp
task_11_join_server/src/tcp/: handlers.hpp  server.cpp  server.hpp  session.cpp  session.hpp
task_11_join_server/src/utils/: env.hpp  time.cpp  time.hpp
task_12_map_reduce/: CMakeLists.txt  main.cpp  readme.md
task_13_ml/: CMakeLists.txt  main.cpp  readme.md
task_1_cpp_builder/: CMakeLists.txt
task_1_cpp_builder/lib_version/: CMakeLists.txt
task_1_cpp_builder/lib_version/include/: version.hpp
task_1_cpp_builder/lib_version/src/: test_version.cpp  version.cpp  version_consts.hpp.in
task_1_cpp_builder/src/: main.cpp
task_2_ip_filter/: CMakeLists.txt
task_2_ip_filter/src/: ip_address.hpp  main.cpp  parser.cpp  parser.hpp  utils.cpp  utils.hpp
task_2_ip_filter/tests/: test_main.cpp  test_parser.cpp  test_utils.cpp
task_3_allocator/: CMakeLists.txt  readme.md
task_3_allocator/src/: block_allocator.hpp  linked_list.hpp  main.cpp
task_3_allocator/tests/: test_allocator.cpp  test_list.cpp  test_main.cpp
task_4_ip_print/: CMakeLists.txt
task_4_ip_print/src/: main.cpp  print_ip.hpp
task_5_mvc/: CMakeLists.txt  readme.md
task_6_matrix/: CMakeLists.txt  readme.md
task_7_bulk/: CMakeLists.txt  readme.md
task_8_bayan/: CMakeLists.txt  readme.md
task_8_bayan/src/: main.cpp  utils.hpp
task_8_bayan/src/file_comparator/: file_comparator.cpp  file_comparator.hpp
task_8_bayan/src/file_reader/: factory.cpp  factory.hpp  file_reader.cpp  file_reader.hpp
task_8_bayan/src/file_scanner/: file_scanner.cpp  file_scanner.hpp
task_8_bayan/src/hash/: default.cpp  default.hpp  factory.cpp  factory.hpp  hash.hpp  hash_processor.hpp  md5.hpp  rs.cpp  rs.hpp
task_9_async/: CMakeLists.txt  main.cpp  readme.md  test_input.txt
task_9_async/lib_async/: CMakeLists.txt
task_9_async/lib_async/include/: async.hpp  handle.hpp
task_9_async/lib_async/src/: async.cpp  commands.hpp
task_9_async/lib_async/src/containers/: bulk_container.hpp  dynamic_bulk_container.hpp  static_bulk_container.hpp
task_9_async/lib_async/src/context/: context_holder.cpp  context_holder.hpp
task_9_async/lib_async/src/pubsub/: queue.hpp
task_9_async/lib_async/src/sinks/: sink_holder.cpp  sink_holder.hpp
task_9_async/lib_async/src/utils/: file.cpp  file.hpp  time.cpp
(+59 files in other folders)
