cmake_minimum_required (VERSION 3.2)
 
project (otus_cpp)

add_subdirectory (./task_1_cpp_builder)
add_subdirectory (./task_2_ip_filter)
add_subdirectory (./task_3_allocator)
add_subdirectory (./task_4_ip_print)
add_subdirectory (./task_5_mvc)
add_subdirectory (./task_6_matrix)
add_subdirectory (./task_7_bulk)
add_subdirectory (./task_9_async)
